// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`LogoMark > matches the snapshot 1`] = `
<svg
  aria-label="Nightstem"
  class="text-primary-500"
  fill="none"
  role="img"
  viewBox="0 0 500 500"
  xmlns="http://www.w3.org/2000/svg"
>
  <path
    d="M346.04 135.875L500 245.427L161.185 495.252C157.629 497.874 151.828 497.923 148.228 495.362L0.786259 390.448L346.04 135.875Z"
    fill="currentColor"
  />
  <path
    d="M148.322 4.74771C151.878 2.12562 157.68 2.07657 161.279 4.63814L333.785 127.386L179.023 241.499L9.54552e-05 114.113L148.322 4.74771Z"
    fill="currentColor"
  />
</svg>
`;

exports[`LogoMark > matches the snapshot in decorative mode 1`] = `
<svg
  aria-hidden="true"
  class="text-primary-500"
  fill="none"
  viewBox="0 0 500 500"
  xmlns="http://www.w3.org/2000/svg"
>
  <path
    d="M346.04 135.875L500 245.427L161.185 495.252C157.629 497.874 151.828 497.923 148.228 495.362L0.786259 390.448L346.04 135.875Z"
    fill="currentColor"
  />
  <path
    d="M148.322 4.74771C151.878 2.12562 157.68 2.07657 161.279 4.63814L333.785 127.386L179.023 241.499L9.54552e-05 114.113L148.322 4.74771Z"
    fill="currentColor"
  />
</svg>
`;
